[package]
name = "greenhouse-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "1.0.10"
config = "0.13.2"
error-chain = "0.12.4"
hyper = "0.14.20"
reqwest = {version = "0.11.12", features = ["blocking", "json"]}
serde = "1.0.145"
serde_json = "1.0.85"
tokio = "1.21.2"
